fix alignment

--- a/src/App/index.scss
+++ b/src/App/index.scss
@@ -6,7 +6,7 @@
         column-gap: 1rem;
         @include breakpoint-up(large) {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
         }
     }
 
